--- a/Task_Manager_Backend/Task_Manager_Backend.csproj
+++ b/Task_Manager_Backend/Task_Manager_Backend.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -13,6 +13,15 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+	<Folder Include="Data\" />
+	<Folder Include="Migrations\" />
+	<Folder Include="DTOs\" />
+	<Folder Include="Services\" />
+	<Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
